# GCtesting

./: BN.cpp  BN.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TinyGarble  cmake_install.cmake  common.h  garbled_circuit.cpp  garbled_circuit.h  garbled_circuit_high_mem.cpp  garbled_circuit_high_mem.h  garbled_circuit_main.cpp  garbled_circuit_util.cpp  garbled_circuit_util.h  log.cpp  log.h  run  tinygarble_config.h  util.cpp  util.h  util_test.cpp
scd/: CMakeLists.txt  CTestTestfile.cmake  Makefile  SCD_Evaluator_Main  V2SCD_ALL.sh  V2SCD_Main  benchmarks.txt  cmake_install.cmake  parse_netlist.cpp  scd.cpp  scd.h  scd_evaluator.cpp  scd_evaluator.h  scd_evaluator_main.cpp  scheduling.cpp  v_2_scd.cpp  v_2_scd_main.cpp
scd/netlists/: aes_11cc.v  cordic_32bit_31cc.v  matrix_mult_nxn_32bit_n3cc.v
